--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Студия</title>
+    <title>WebStudio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -620,6 +620,8 @@
       </div>
     </footer>
 
+<!-- Модалка -->
+
     <div class="modal__backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="button__modal" data-modal-close>
@@ -678,6 +680,9 @@
         </form>
       </div>
     </div>
+
+<!-- дж-скрипт -->
+
     <script src="./js/header.js"></script>
     <script src="./js/modal.js"></script>
     <script
