--- a/portfolio.html
+++ b/portfolio.html
@@ -198,23 +198,18 @@
                         ./images/portfolio-project2-t.jpg    1x,
                         ./images/portfolio-project2-t@2x.jpg 2x
                       "
-                      media="(min-width: 768px)"
-                    />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/portfolio-project2-m.jpg    1x,
                         ./images/portfolio-project2-m@2x.jpg 2x
                       "
-                      media="(max-width: 767px)"
-                    />
-
+                      media="(max-width: 767px)" />
                     <img
                       class="images"
                       src="./images/portfolio-project2-d.jpg"
-                      alt="Два баскетболиста в прыжке, с мячом и в защите"
-                    />
+                      alt="Два баскетболиста в прыжке, с мячом и в защите" />
                   </picture>
-
                   <div class="overlay">
                     <p class="overlay__text">
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -244,43 +239,33 @@
                         ./images/portfolio-project3-d.jpg    1x,
                         ./images/portfolio-project3-d@2x.jpg 2x
                       "
-                      media="(min-width: 1200px)"
-                    />
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="
                         ./images/portfolio-project3-t.jpg    1x,
                         ./images/portfolio-project3-t@2x.jpg 2x
                       "
-                      media="(min-width: 768px)"
-                    />
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/portfolio-project3-m.jpg    1x,
                         ./images/portfolio-project3-m@2x.jpg 2x
                       "
-                      media="(max-width: 767px)"
-                    />
-
-                    <img
+                      media="(max-width: 767px)" />
+                      <img
                       class="images"
                       src="./images/portfolio-project3-d.jpg"
-                      alt="Логотип ресторана Seafood"
-                    />
+                      alt="Логотип ресторана Seafood" />
                   </picture>
-
                   <div class="overlay">
                     <p class="overlay__text">
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                       Accusamus quod nobis obcaecati corrupti voluptates. Quae
-                      veniam totam harum excepturi repellendus.
-                    </p>
+                      veniam totam harum excepturi repellendus.</p>
                   </div>
                 </div>
                 <div class="portfolio-card__body">
-                  <h2 class="portfolio-card__title">
-                    Ресторан
-                    <span lang="en">Seafood</span>
-                  </h2>
+                  <h2 class="portfolio-card__title">Ресторан<span lang="en">Seafood</span></h2>
                   <p class="portfolio-card__text">Приложение</p>
                 </div>
               </a>
@@ -289,49 +274,34 @@
               <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
-                    <source
-                      srcset="
+                    <source srcset="
                         ./images/portfolio-project4-d.jpg    1x,
-                        ./images/portfolio-project4-d@2x.jpg 2x
-                      "
-                      media="(min-width: 1200px)"
-                    />
-
-                    <source
+                        ./images/portfolio-project4-d@2x.jpg 2x "
+                      media="(min-width: 1200px)" />
+                      <source
                       srcset="
                         ./images/portfolio-project4-t.jpg    1x,
-                        ./images/portfolio-project4-t@2x.jpg 2x
-                      "
-                      media="(min-width: 768px)"
-                    />
+                        ./images/portfolio-project4-t@2x.jpg 2x "
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/portfolio-project4-m.jpg    1x,
-                        ./images/portfolio-project4-m@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-
-                    <img
+                        ./images/portfolio-project4-m@2x.jpg 2x "
+                      media="(max-width: 767px)" />
+                      <img
                       class="images"
                       src="./images/portfolio-project4-d.jpg"
-                      alt="Черные наушники"
-                    />
+                      alt="Черные наушники" />
                   </picture>
-
                   <div class="overlay">
                     <p class="overlay__text">
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                       Accusamus quod nobis obcaecati corrupti voluptates. Quae
-                      veniam totam harum excepturi repellendus.
-                    </p>
+                      veniam totam harum excepturi repellendus. </p>
                   </div>
                 </div>
                 <div class="portfolio-card__body">
-                  <h2 class="portfolio-card__title">
-                    Проект
-                    <span lang="en">Prime</span>
-                  </h2>
+                  <h2 class="portfolio-card__title">Проект<span lang="en">Prime</span></h2>
                   <p class="portfolio-card__text">Маркетинг</p>
                 </div>
               </a>
@@ -343,38 +313,28 @@
                     <source
                       srcset="
                         ./images/portfolio-project5-d.jpg    1x,
-                        ./images/portfolio-project5-d@2x.jpg 2x
-                      "
-                      media="(min-width: 1200px)"
-                    />
+                        ./images/portfolio-project5-d@2x.jpg 2x "
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="
                         ./images/portfolio-project5-t.jpg    1x,
-                        ./images/portfolio-project5-t@2x.jpg 2x
-                      "
-                      media="(min-width: 768px)"
-                    />
+                        ./images/portfolio-project5-t@2x.jpg 2x "
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/portfolio-project5-m.jpg    1x,
-                        ./images/portfolio-project5-m@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-
-                    <img
+                        ./images/portfolio-project5-m@2x.jpg 2x "
+                      media="(max-width: 767px)" />
+                      <img
                       class="images"
                       src="./images/portfolio-project5-d.jpg"
-                      alt="Лежат две коробки белого и коричневого цвета с надписями и логотипами"
-                    />
+                      alt="Лежат две коробки белого и коричневого цвета с надписями и логотипами" />
                   </picture>
-
                   <div class="overlay">
                     <p class="overlay__text">
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                       Accusamus quod nobis obcaecati corrupti voluptates. Quae
-                      veniam totam harum excepturi repellendus.
-                    </p>
+                      veniam totam harum excepturi repellendus. </p>
                   </div>
                 </div>
                 <div class="portfolio-card__body">
@@ -393,10 +353,8 @@
                     <source
                       srcset="
                         ./images/portfolio-project6-d.jpg    1x,
-                        ./images/portfolio-project6-d@2x.jpg 2x
-                      "
-                      media="(min-width: 1200px)"
-                    />
+                        ./images/portfolio-project6-d@2x.jpg 2x "
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="
                         ./images/portfolio-project6-t.jpg    1x,
@@ -637,6 +595,9 @@
             </ul>
           </div>
         </div>
+
+<!-- Модал -->
+
         <form class="js-speaker-form">
           <label class="js-speaker-form__label">
             <strong class="footer__text">Подпишитесь на рассылку</strong>
@@ -656,6 +617,8 @@
         </form>
       </div>
     </footer>
+
+    <!-- дж-скрипт -->
 
     <script src="./js/header.js"></script>
 
